data/derived/comb/progs/unify/prog6990.ml.out
Characters 107-108:
  in wwhile(gs, b);;
                ^
Error: This expression has type int but an expression was expected of type
         int -> int
